syntax = "proto3";

package published;

message TopicMessage {
    oneof messages {
        StockCorrected stockCorrected = 1;
    }
}

message StockCorrected {
    string productID = 1;
    int64 quantityChange = 2;
}
